--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.52.2"
+    "sass": "^1.52.2",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
