--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.6",
+    "@types/react-input-mask": "^3.0.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-input-mask": "^2.0.4",
     "sass": "^1.52.2",
     "yup": "^0.32.11"
   },
