--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-input-mask": "^2.0.4",
-    "react-social-login": "^3.4.15",
+    "react-social-login": "3.4.15",
     "sass": "^1.52.2",
     "yup": "^0.32.11"
   },
