--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/x-date-pickers": "^5.0.0-alpha.6",
+    "@react-oauth/google": "^0.2.6",
     "@types/react-input-mask": "^3.0.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
