--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sass": "^1.52.2",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "3.7.2"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
