--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_BASE_URL=https://matching.bet/
+NEXT_PUBLIC_API_URL=http://matchingbetjavabackend-env.eba-zfbzpdh6.us-east-1.elasticbeanstalk.com
