--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-input-mask": "^2.0.4",
+    "react-query": "^3.39.2",
     "react-social-login": "3.4.15",
     "sass": "^1.52.2",
     "yup": "^0.32.11",
