--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-input-mask": "^3.0.1",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
